--- a/dp-alexnet-minst.ipynb
+++ b/dp-alexnet-minst.ipynb
@@ -88,21 +88,10 @@
    "source": [
     "transform = transforms.ToTensor()\n",
     "trainset = torchvision.datasets.MNIST(root='./dataset',train=True,download=False,transform=transform)\n",
-    "trainloader = torch.utils.data.DataLoader(trainset, batch_size=100,shuffle=True,num_workers=0)\n",
+    "trainloader = torch.utils.data.DataLoader(trainset, batch_size=BATCH_SIZE,shuffle=True,num_workers=0)\n",
     "\n",
     "testset = torchvision.datasets.MNIST(root='./dataset',train=False,download=False,transform=transform)\n",
-    "testloader = torch.utils.data.DataLoader(testset,batch_size=100,shuffle=False,num_workers=0)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for data in testloader:\n",
-    "#     print(data)\n",
-    "#     break"
+    "testloader = torch.utils.data.DataLoader(testset,batch_size=BATCH_SIZE,shuffle=False,num_workers=0)\n"
    ]
   },
   {
@@ -173,51 +162,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epsilon = 1\n",
+    "epsilon = 2\n",
     "\n",
     "# This analysis has a total privacy cost of epsilon = 1, even though we release many results!\n",
     "f = lambda x: x + np.random.laplace(loc=0, scale=1/epsilon)\n",
     "\n",
-    "def mysgd(params, lr, batch_size):  #@save\n",
+    "def mysgd(params, lr, batch_size):  \n",
     "    \"\"\"小批量随机梯度下降\"\"\"\n",
+    "    # print(params)\n",
     "    with torch.no_grad():\n",
     "        for param in params:\n",
+    "            # print(param)\n",
     "            # param -= (lr * param.grad / batch_size).apply(f)\n",
-    "            print(param.grad)\n",
-    "            param -= lr * param.grad / batch_size\n",
-    "            param.grad.zero_()\n"
+    "            # param -= (lr * (param.grad+ torch.tensor(np.random.laplace(loc=0, scale=1/epsilon))) ) \n",
+    "            param -= (lr * param.grad) + torch.tensor(np.random.laplace(loc=0, scale=5/epsilon))\n",
+    "\n",
+    "            # param -= lr * param.grad / batch_size\n",
+    "            param.grad.zero_()\n",
+    "            # print(param)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for *: 'float' and 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-18-abbbb8521c21>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mcriterion\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCrossEntropyLoss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# 交叉熵损失函数，通常用于多分类问题上\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# optimizer = optim.SGD(net.parameters(), lr=LR, momentum=0.9)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0moptimizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmysgd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mLR\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mBATCH_SIZE\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-17-f35ea46f4a09>\u001b[0m in \u001b[0;36mmysgd\u001b[1;34m(params, lr, batch_size)\u001b[0m\n\u001b[0;32m     11\u001b[0m             \u001b[0mparam\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrequires_grad\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparam\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m             \u001b[0mparam\u001b[0m \u001b[1;33m-=\u001b[0m \u001b[0mlr\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mparam\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m             \u001b[0mparam\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzero_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'float' and 'NoneType'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "net = AlexNet().to(device)\n",
     "criterion = nn.CrossEntropyLoss()  # 交叉熵损失函数，通常用于多分类问题上\n",
-    "# optimizer = optim.SGD(net.parameters(), lr=LR, momentum=0.9)\n",
-    "optimizer = mysgd(net.parameters(), lr=LR, batch_size=BATCH_SIZE)"
+    "# optimizer = optim.SGD(net.parameters(), lr=LR, momentum=0.9)"
    ]
   },
   {
@@ -243,13 +216,14 @@
     "            inputs, labels = inputs.to(device), labels.to(device)\n",
     " \n",
     "            # 梯度清零\n",
-    "            optimizer.zero_grad()\n",
+    "            # optimizer.zero_grad()\n",
     " \n",
     "            # forward + backward\n",
     "            outputs = net(inputs)\n",
     "            loss = criterion(outputs, labels)\n",
     "            loss.backward()\n",
-    "            optimizer.step()\n",
+    "            # optimizer.step()\n",
+    "            mysgd(net.parameters(), lr=LR, batch_size=BATCH_SIZE)\n",
     " \n",
     "            # 每训练100个batch打印一次平均loss\n",
     "            sum_loss += loss.item()\n",
