--- a/dp-alexnet-minst.ipynb
+++ b/dp-alexnet-minst.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install opacus"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -13,7 +22,10 @@
     "import torchvision.transforms as transforms\n",
     "import torch.nn.functional as F\n",
     "import time\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "from opacus import PrivacyEngine\n",
+    "from opacus.utils.batch_memory_manager import BatchMemoryManager\n"
    ]
   },
   {
@@ -61,7 +73,10 @@
    "source": [
     "EPOCH = 10 # 遍历数据集次数\n",
     "BATCH_SIZE = 64  # 批处理尺寸(batch_size)\n",
-    "LR = 0.01  # 学习率"
+    "LR = 0.01  # 学习率\n",
+    "MAX_GRAD_NORM = 1.2\n",
+    "EPSILON = 2\n",
+    "DELTA = 1e-5"
    ]
   },
   {
@@ -157,29 +172,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "该部分尝试自己改写梯度下降，但仿佛会让梯度爆炸，暂时先不用"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "epsilon = 2\n",
+    "# epsilon = 2\n",
     "\n",
-    "# This analysis has a total privacy cost of epsilon = 1, even though we release many results!\n",
-    "f = lambda x: x + np.random.laplace(loc=0, scale=1/epsilon)\n",
+    "# # This analysis has a total privacy cost of epsilon = 1, even though we release many results!\n",
+    "# f = lambda x: x + np.random.laplace(loc=0, scale=1/epsilon)\n",
     "\n",
-    "def mysgd(params, lr, batch_size):  \n",
-    "    \"\"\"小批量随机梯度下降\"\"\"\n",
-    "    # print(params)\n",
-    "    with torch.no_grad():\n",
-    "        for param in params:\n",
-    "            # print(param)\n",
-    "            # param -= (lr * param.grad / batch_size).apply(f)\n",
-    "            # param -= (lr * (param.grad+ torch.tensor(np.random.laplace(loc=0, scale=1/epsilon))) ) \n",
-    "            param -= (lr * param.grad) + torch.tensor(np.random.laplace(loc=0, scale=5/epsilon))\n",
+    "# def mysgd(params, lr, batch_size):  \n",
+    "#     \"\"\"小批量随机梯度下降\"\"\"\n",
+    "#     # print(params)\n",
+    "#     with torch.no_grad():\n",
+    "#         for param in params:\n",
+    "#             # print(param)\n",
+    "#             # param -= (lr * param.grad / batch_size).apply(f)\n",
+    "#             # param -= (lr * (param.grad+ torch.tensor(np.random.laplace(loc=0, scale=1/epsilon))) ) \n",
+    "#             param -= (lr * param.grad) + torch.tensor(np.random.laplace(loc=0, scale=5/epsilon))\n",
     "\n",
-    "            # param -= lr * param.grad / batch_size\n",
-    "            param.grad.zero_()\n",
-    "            # print(param)\n"
+    "#             # param -= lr * param.grad / batch_size\n",
+    "#             param.grad.zero_()\n",
+    "#             # print(param)\n"
    ]
   },
   {
@@ -190,7 +212,28 @@
    "source": [
     "net = AlexNet().to(device)\n",
     "criterion = nn.CrossEntropyLoss()  # 交叉熵损失函数，通常用于多分类问题上\n",
-    "# optimizer = optim.SGD(net.parameters(), lr=LR, momentum=0.9)"
+    "optimizer = optim.SGD(net.parameters(), lr=LR, momentum=0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "privacy_engine = PrivacyEngine()\n",
+    "\n",
+    "net, optimizer, train_loader = privacy_engine.make_private_with_epsilon(\n",
+    "    module=net,\n",
+    "    optimizer=optimizer,\n",
+    "    data_loader=trainloader,\n",
+    "    epochs=EPOCHS,\n",
+    "    target_epsilon=EPSILON,\n",
+    "    target_delta=DELTA,\n",
+    "    max_grad_norm=MAX_GRAD_NORM,\n",
+    ")\n",
+    "\n",
+    "print(f\"Using sigma={optimizer.noise_multiplier} and C={MAX_GRAD_NORM}\")"
    ]
   },
   {
@@ -216,14 +259,14 @@
     "            inputs, labels = inputs.to(device), labels.to(device)\n",
     " \n",
     "            # 梯度清零\n",
-    "            # optimizer.zero_grad()\n",
+    "            optimizer.zero_grad()\n",
     " \n",
     "            # forward + backward\n",
     "            outputs = net(inputs)\n",
     "            loss = criterion(outputs, labels)\n",
     "            loss.backward()\n",
-    "            # optimizer.step()\n",
-    "            mysgd(net.parameters(), lr=LR, batch_size=BATCH_SIZE)\n",
+    "            optimizer.step()\n",
+    "            # mysgd(net.parameters(), lr=LR, batch_size=BATCH_SIZE)\n",
     " \n",
     "            # 每训练100个batch打印一次平均loss\n",
     "            sum_loss += loss.item()\n",
@@ -243,7 +286,8 @@
     "                _, predicted = torch.max(outputs.data, 1)\n",
     "                total += labels.size(0)\n",
     "                correct += (predicted == labels).sum()\n",
-    "            print('第%d个epoch的识别准确率为：%d%%' % (epoch + 1, (100 * correct / total)))\n",
+    "            epsilon = privacy_engine.get_epsilon(DELTA)\n",
+    "            print('第%d个epoch的识别准确率为：%d%%' % (epoch + 1, (100 * correct / total)),f\"(ε = {epsilon:.2f}, δ = {DELTA})\")\n",
     "        # 保存模型参数\n",
     "        # torch.save(net.state_dict(), './params.pth')"
    ]
