--- a/dp-alexnet-minst.ipynb
+++ b/dp-alexnet-minst.ipynb
@@ -76,7 +76,8 @@
     "LR = 0.01  # 学习率\n",
     "MAX_GRAD_NORM = 1.2\n",
     "EPSILON = 2\n",
-    "DELTA = 1e-5"
+    "DELTA = 1e-5\n",
+    "MAX_PHYSICAL_BATCH_SIZE = 128"
    ]
   },
   {
@@ -253,43 +254,48 @@
     " \n",
     "    for epoch in range(EPOCH):\n",
     "        sum_loss = 0.0\n",
-    "        # 数据读取\n",
-    "        for i, data in enumerate(trainloader):\n",
-    "            inputs, labels = data\n",
-    "            inputs, labels = inputs.to(device), labels.to(device)\n",
-    " \n",
-    "            # 梯度清零\n",
-    "            optimizer.zero_grad()\n",
-    " \n",
-    "            # forward + backward\n",
-    "            outputs = net(inputs)\n",
-    "            loss = criterion(outputs, labels)\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "            # mysgd(net.parameters(), lr=LR, batch_size=BATCH_SIZE)\n",
-    " \n",
-    "            # 每训练100个batch打印一次平均loss\n",
-    "            sum_loss += loss.item()\n",
-    "            if i % 100 == 99:\n",
-    "                print('[%d, %d] loss: %.03f'\n",
-    "                      % (epoch + 1, i + 1, sum_loss / 100))\n",
-    "                sum_loss = 0.0\n",
-    "        # 每跑完一次epoch测试一下准确率\n",
-    "        with torch.no_grad():\n",
-    "            correct = 0\n",
-    "            total = 0\n",
-    "            for data in testloader:\n",
-    "                images, labels = data\n",
-    "                images, labels = images.to(device), labels.to(device)\n",
-    "                outputs = net(images)\n",
-    "                # 取得分最高的那个类\n",
-    "                _, predicted = torch.max(outputs.data, 1)\n",
-    "                total += labels.size(0)\n",
-    "                correct += (predicted == labels).sum()\n",
-    "            epsilon = privacy_engine.get_epsilon(DELTA)\n",
-    "            print('第%d个epoch的识别准确率为：%d%%' % (epoch + 1, (100 * correct / total)),f\"(ε = {epsilon:.2f}, δ = {DELTA})\")\n",
-    "        # 保存模型参数\n",
-    "        # torch.save(net.state_dict(), './params.pth')"
+    "        with BatchMemoryManager(\n",
+    "            data_loader=trainloader, \n",
+    "            max_physical_batch_size=MAX_PHYSICAL_BATCH_SIZE, \n",
+    "            optimizer=optimizer\n",
+    "        ) as memory_safe_data_loader:\n",
+    "            # 数据读取\n",
+    "            for i, data in enumerate(trainloader):\n",
+    "                inputs, labels = data\n",
+    "                inputs, labels = inputs.to(device), labels.to(device)\n",
+    "    \n",
+    "                # 梯度清零\n",
+    "                optimizer.zero_grad()\n",
+    "    \n",
+    "                # forward + backward\n",
+    "                outputs = net(inputs)\n",
+    "                loss = criterion(outputs, labels)\n",
+    "                loss.backward()\n",
+    "                optimizer.step()\n",
+    "                # mysgd(net.parameters(), lr=LR, batch_size=BATCH_SIZE)\n",
+    "    \n",
+    "                # 每训练100个batch打印一次平均loss\n",
+    "                sum_loss += loss.item()\n",
+    "                if i % 100 == 99:\n",
+    "                    print('[%d, %d] loss: %.03f'\n",
+    "                        % (epoch + 1, i + 1, sum_loss / 100))\n",
+    "                    sum_loss = 0.0\n",
+    "            # 每跑完一次epoch测试一下准确率\n",
+    "            with torch.no_grad():\n",
+    "                correct = 0\n",
+    "                total = 0\n",
+    "                for data in testloader:\n",
+    "                    images, labels = data\n",
+    "                    images, labels = images.to(device), labels.to(device)\n",
+    "                    outputs = net(images)\n",
+    "                    # 取得分最高的那个类\n",
+    "                    _, predicted = torch.max(outputs.data, 1)\n",
+    "                    total += labels.size(0)\n",
+    "                    correct += (predicted == labels).sum()\n",
+    "                epsilon = privacy_engine.get_epsilon(DELTA)\n",
+    "                print('第%d个epoch的识别准确率为：%d%%' % (epoch + 1, (100 * correct / total)),f\"(ε = {epsilon:.2f}, δ = {DELTA})\")\n",
+    "            # 保存模型参数\n",
+    "            # torch.save(net.state_dict(), './params.pth')"
    ]
   },
   {
