--- a/dp-alexnet-minst.ipynb
+++ b/dp-alexnet-minst.ipynb
@@ -4,16 +4,16 @@
       "cell_type": "code",
       "execution_count": 44,
       "metadata": {
-        "id": "fi9RkJQAwxYh",
-        "outputId": "a61724a4-28b8-40e2-bdae-ffcede92e9ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fi9RkJQAwxYh",
+        "outputId": "a61724a4-28b8-40e2-bdae-ffcede92e9ed"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: opacus in /usr/local/lib/python3.7/dist-packages (1.1.1)\n",
             "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.7/dist-packages (from opacus) (1.21.6)\n",
@@ -52,22 +52,22 @@
       "cell_type": "code",
       "execution_count": 46,
       "metadata": {
-        "id": "Sa8tULHVwxYl",
-        "outputId": "6d6c99bd-b2b8-47bf-ec89-2106cd5ba102",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Sa8tULHVwxYl",
+        "outputId": "6d6c99bd-b2b8-47bf-ec89-2106cd5ba102"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "device(type='cuda')"
             ]
           },
+          "execution_count": 46,
           "metadata": {},
-          "execution_count": 46
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -79,16 +79,16 @@
       "cell_type": "code",
       "execution_count": 47,
       "metadata": {
-        "id": "Aho-UC-EwxYn",
-        "outputId": "f70ccfc3-8a68-42d6-bf16-3c6f5a10d9c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Aho-UC-EwxYn",
+        "outputId": "f70ccfc3-8a68-42d6-bf16-3c6f5a10d9c7"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Wed Apr 20 03:16:52 2022       \n",
             "+-----------------------------------------------------------------------------+\n",
@@ -133,13 +133,13 @@
       },
       "outputs": [],
       "source": [
-        "EPOCH = 10 # 遍历数据集次数\n",
+        "EPOCH = 30 # 遍历数据集次数\n",
         "BATCH_SIZE = 512  # 批处理尺寸(batch_size)\n",
-        "LR = 0.1  # 学习率\n",
+        "LR = 0.01  # 学习率\n",
         "MAX_GRAD_NORM = 1.2\n",
         "EPSILON = 2\n",
         "DELTA = 1e-4\n",
-        "MAX_PHYSICAL_BATCH_SIZE = 128"
+        "MAX_PHYSICAL_BATCH_SIZE = 256"
       ]
     },
     {
@@ -276,22 +276,22 @@
       "cell_type": "code",
       "execution_count": 59,
       "metadata": {
-        "id": "USsdwtv5wxYy",
-        "outputId": "96a9ee58-d5e6-4c8b-d121-53bf74383cfb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "USsdwtv5wxYy",
+        "outputId": "96a9ee58-d5e6-4c8b-d121-53bf74383cfb"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[]"
             ]
           },
+          "execution_count": 59,
           "metadata": {},
-          "execution_count": 59
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -304,43 +304,43 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 60,
+      "metadata": {
+        "id": "aEj8AMdAyKD9"
+      },
+      "outputs": [],
       "source": [
         "net = ModuleValidator.fix(net)\n",
         "ModuleValidator.validate(net, strict=False)\n",
         "net = net.to(device)\n"
-      ],
-      "metadata": {
-        "id": "aEj8AMdAyKD9"
-      },
-      "execution_count": 60,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "criterion = nn.CrossEntropyLoss()  # 交叉熵损失函数，通常用于多分类问题上\n",
-        "optimizer = optim.SGD(net.parameters(), lr=LR, momentum=0.9)"
-      ],
+      "execution_count": 61,
       "metadata": {
         "id": "O3bJFyn82_8l"
       },
-      "execution_count": 61,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "criterion = nn.CrossEntropyLoss()  # 交叉熵损失函数，通常用于多分类问题上\n",
+        "optimizer = optim.SGD(net.parameters(), lr=LR, momentum=0.9)"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 62,
       "metadata": {
-        "id": "KoaV_cc3wxYy",
-        "outputId": "78e16e07-4e79-445a-fe9c-ccd61a088c88",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KoaV_cc3wxYy",
+        "outputId": "78e16e07-4e79-445a-fe9c-ccd61a088c88"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.7/dist-packages/opacus/privacy_engine.py:115: UserWarning: Secure RNG turned off. This is perfectly fine for experimentation as it allows for much faster training performance, but remember to turn it on and retrain one last time before production with ``secure_mode`` turned on.\n",
             "  \"Secure RNG turned off. This is perfectly fine for experimentation as it allows \"\n",
@@ -349,8 +349,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Using sigma=0.909423828125 and C=1.2\n"
           ]
@@ -392,7 +392,7 @@
         "def train():\n",
         " \n",
         "    for epoch in range(EPOCH):\n",
-        "        sum_loss = 0.0\n",
+        "        sum_loss = []\n",
         "        net.train()\n",
         "        with BatchMemoryManager(\n",
         "            data_loader=trainloader, \n",
@@ -415,11 +415,11 @@
         "                # mysgd(net.parameters(), lr=LR, batch_size=BATCH_SIZE)\n",
         "    \n",
         "                # 每训练100个batch打印一次平均loss\n",
-        "                sum_loss += loss.item()\n",
-        "                if i % 100 == 99:\n",
-        "                    print('[%d, %d] loss: %.03f'\n",
-        "                        % (epoch + 1, i + 1, sum_loss / 100))\n",
-        "                    sum_loss = 0.0\n",
+        "                sum_loss.append(loss.item())\n",
+        "                # if i % 100 == 99:\n",
+        "                #     print('[%d, %d] loss: %.03f'\n",
+        "                #         % (epoch + 1, i + 1, sum_loss / 100))\n",
+        "                #     sum_loss = 0.0\n",
         "            # 每跑完一次epoch测试一下准确率\n",
         "            net.eval()\n",
         "            with torch.no_grad():\n",
@@ -434,7 +434,7 @@
         "                    total += labels.size(0)\n",
         "                    correct += (predicted == labels).sum()\n",
         "                epsilon = privacy_engine.get_epsilon(DELTA)\n",
-        "                print('第%d个epoch的识别准确率为：%d%%' % (epoch + 1, (100 * correct / total)),f\"(ε = {epsilon:.2f}, δ = {DELTA})\")\n",
+        "                print('第%d个epoch的识别准确率为：%d%%' % (epoch + 1, (100 * correct / total)),\"loss为%f\" % (np.mean(sum_loss)),f\"(ε = {epsilon:.2f}, δ = {DELTA})\")\n",
         "            # 保存模型参数\n",
         "            # torch.save(net.state_dict(), './params.pth')"
       ]
@@ -443,17 +443,14 @@
       "cell_type": "code",
       "execution_count": 64,
       "metadata": {
-        "id": "2QEsXAhkwxY0",
-        "outputId": "abf38fa6-dfa8-47e1-d946-9613a971a7b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2QEsXAhkwxY0",
+        "outputId": "abf38fa6-dfa8-47e1-d946-9613a971a7b7"
       },
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
           "name": "stderr",
           "output_type": "stream",
           "text": [
@@ -462,8 +459,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[1, 100] loss: 2.295\n",
             "[1, 200] loss: 2.035\n",
@@ -529,12 +526,15 @@
         "id": "abZi5GPwwxY1"
       },
       "outputs": [],
-      "source": [
-        ""
-      ]
+      "source": []
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "name": "dp-alexnet-minst.ipynb",
+      "provenance": []
+    },
     "interpreter": {
       "hash": "73e1d25d57e14df6cec64c283e0dd23faae1c4fc370d549e379c51e4d2bab0ac"
     },
@@ -555,12 +555,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.8.10"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "name": "dp-alexnet-minst.ipynb",
-      "provenance": []
-    },
-    "accelerator": "GPU"
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
