complete dp-alexnet-minst

--- a/dp-alexnet-minst.ipynb
+++ b/dp-alexnet-minst.ipynb
@@ -2,22 +2,22 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fi9RkJQAwxYh",
-        "outputId": "a61724a4-28b8-40e2-bdae-ffcede92e9ed"
+        "outputId": "c11ab9d1-f8a0-429b-df19-8280aae835b5"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Requirement already satisfied: opacus in /usr/local/lib/python3.7/dist-packages (1.1.1)\n",
-            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.7/dist-packages (from opacus) (1.21.6)\n",
             "Requirement already satisfied: scipy>=1.2 in /usr/local/lib/python3.7/dist-packages (from opacus) (1.4.1)\n",
+            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.7/dist-packages (from opacus) (1.21.6)\n",
             "Requirement already satisfied: torch>=1.8 in /usr/local/lib/python3.7/dist-packages (from opacus) (1.10.0+cu111)\n",
             "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from torch>=1.8->opacus) (4.1.1)\n"
           ]
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 16,
       "metadata": {
         "id": "Qe2g585UwxYj"
       },
@@ -50,24 +50,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sa8tULHVwxYl",
-        "outputId": "6d6c99bd-b2b8-47bf-ec89-2106cd5ba102"
+        "outputId": "5e239895-5769-4a9f-8c2d-3de04f8a023e"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "device(type='cuda')"
             ]
           },
-          "execution_count": 46,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 17
         }
       ],
       "source": [
@@ -77,20 +77,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Aho-UC-EwxYn",
-        "outputId": "f70ccfc3-8a68-42d6-bf16-3c6f5a10d9c7"
+        "outputId": "6828eafa-cce3-4f98-fa7b-534252b436fd"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Wed Apr 20 03:16:52 2022       \n",
+            "Thu Apr 21 01:34:39 2022       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -98,8 +98,8 @@
             "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
-            "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   69C    P0    32W /  70W |   5880MiB / 15109MiB |      0%      Default |\n",
+            "|   0  Tesla K80           Off  | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   73C    P0    73W / 149W |   6488MiB / 11441MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 19,
       "metadata": {
         "id": "W830m3MzwxYp"
       },
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 20,
       "metadata": {
         "id": "lJo6SLPPwxYr"
       },
@@ -178,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 21,
       "metadata": {
         "id": "ecZtqUEcwxYu"
       },
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 22,
       "metadata": {
         "id": "gKw0EwA7wxYx"
       },
@@ -274,24 +274,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "USsdwtv5wxYy",
-        "outputId": "96a9ee58-d5e6-4c8b-d121-53bf74383cfb"
+        "outputId": "ee7f9556-09b2-492d-f4fc-a40a06af7da1"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[]"
             ]
           },
-          "execution_count": 59,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 23
         }
       ],
       "source": [
@@ -304,7 +304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 24,
       "metadata": {
         "id": "aEj8AMdAyKD9"
       },
@@ -317,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 25,
       "metadata": {
         "id": "O3bJFyn82_8l"
       },
@@ -329,18 +329,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KoaV_cc3wxYy",
-        "outputId": "78e16e07-4e79-445a-fe9c-ccd61a088c88"
+        "outputId": "ac7517c5-957f-4a75-ffe7-66e40cf956c5"
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
             "/usr/local/lib/python3.7/dist-packages/opacus/privacy_engine.py:115: UserWarning: Secure RNG turned off. This is perfectly fine for experimentation as it allows for much faster training performance, but remember to turn it on and retrain one last time before production with ``secure_mode`` turned on.\n",
             "  \"Secure RNG turned off. This is perfectly fine for experimentation as it allows \"\n",
@@ -349,10 +349,10 @@
           ]
         },
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Using sigma=0.909423828125 and C=1.2\n"
+            "Using sigma=1.1962890625 and C=1.2\n"
           ]
         }
       ],
@@ -383,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 27,
       "metadata": {
         "id": "pd2EIhuuwxYz"
       },
@@ -441,77 +441,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2QEsXAhkwxY0",
-        "outputId": "abf38fa6-dfa8-47e1-d946-9613a971a7b7"
+        "outputId": "1a89a27a-4595-4750-ab2c-f2f428d852d1"
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
             "/usr/local/lib/python3.7/dist-packages/torch/nn/modules/module.py:1025: UserWarning: Using a non-full backward hook when the forward contains multiple autograd Nodes is deprecated and will be removed in future versions. This hook will be missing some grad_input. Please use register_full_backward_hook to get the documented behavior.\n",
             "  warnings.warn(\"Using a non-full backward hook when the forward contains multiple autograd Nodes \"\n"
           ]
         },
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "[1, 100] loss: 2.295\n",
-            "[1, 200] loss: 2.035\n",
-            "[1, 300] loss: 1.065\n",
-            "[1, 400] loss: 0.942\n",
-            "第1个epoch的识别准确率为：81% (ε = 1.11, δ = 0.0001)\n",
-            "[2, 100] loss: 0.838\n",
-            "[2, 200] loss: 0.734\n",
-            "[2, 300] loss: 0.686\n",
-            "[2, 400] loss: 0.666\n",
-            "第2个epoch的识别准确率为：84% (ε = 1.24, δ = 0.0001)\n",
-            "[3, 100] loss: 0.831\n",
-            "[3, 200] loss: 0.727\n",
-            "[3, 300] loss: 0.695\n",
-            "[3, 400] loss: 0.606\n",
-            "第3个epoch的识别准确率为：88% (ε = 1.35, δ = 0.0001)\n",
-            "[4, 100] loss: 0.810\n",
-            "[4, 200] loss: 0.747\n",
-            "[4, 300] loss: 0.862\n",
-            "[4, 400] loss: 0.954\n",
-            "第4个epoch的识别准确率为：90% (ε = 1.46, δ = 0.0001)\n",
-            "[5, 100] loss: 1.077\n",
-            "[5, 200] loss: 1.543\n",
-            "[5, 300] loss: 1.143\n",
-            "[5, 400] loss: 1.304\n",
-            "第5个epoch的识别准确率为：88% (ε = 1.55, δ = 0.0001)\n",
-            "[6, 100] loss: 1.270\n",
-            "[6, 200] loss: 1.341\n",
-            "[6, 300] loss: 1.530\n",
-            "[6, 400] loss: 1.753\n",
-            "第6个epoch的识别准确率为：90% (ε = 1.65, δ = 0.0001)\n",
-            "[7, 100] loss: 1.733\n",
-            "[7, 200] loss: 1.825\n",
-            "[7, 300] loss: 2.168\n",
-            "[7, 400] loss: 2.425\n",
-            "第7个epoch的识别准确率为：89% (ε = 1.74, δ = 0.0001)\n",
-            "[8, 100] loss: 2.326\n",
-            "[8, 200] loss: 2.674\n",
-            "[8, 300] loss: 2.804\n",
-            "[8, 400] loss: 3.132\n",
-            "第8个epoch的识别准确率为：86% (ε = 1.83, δ = 0.0001)\n",
-            "[9, 100] loss: 3.187\n",
-            "[9, 200] loss: 3.078\n",
-            "[9, 300] loss: 3.535\n",
-            "[9, 400] loss: 3.219\n",
-            "第9个epoch的识别准确率为：83% (ε = 1.91, δ = 0.0001)\n",
-            "[10, 100] loss: 4.395\n",
-            "[10, 200] loss: 4.581\n",
-            "[10, 300] loss: 4.501\n",
-            "[10, 400] loss: 4.483\n",
-            "第10个epoch的识别准确率为：86% (ε = 1.99, δ = 0.0001)\n"
+            "第1个epoch的识别准确率为：28% loss为2.289759 (ε = 0.55, δ = 0.0001)\n",
+            "第2个epoch的识别准确率为：59% loss为2.087370 (ε = 0.62, δ = 0.0001)\n",
+            "第3个epoch的识别准确率为：64% loss为1.369642 (ε = 0.69, δ = 0.0001)\n",
+            "第4个epoch的识别准确率为：69% loss为0.988036 (ε = 0.76, δ = 0.0001)\n",
+            "第5个epoch的识别准确率为：73% loss为0.875751 (ε = 0.82, δ = 0.0001)\n",
+            "第6个epoch的识别准确率为：76% loss为0.849529 (ε = 0.88, δ = 0.0001)\n",
+            "第7个epoch的识别准确率为：77% loss为0.826020 (ε = 0.94, δ = 0.0001)\n",
+            "第8个epoch的识别准确率为：79% loss为0.814218 (ε = 1.00, δ = 0.0001)\n",
+            "第9个epoch的识别准确率为：81% loss为0.810509 (ε = 1.06, δ = 0.0001)\n",
+            "第10个epoch的识别准确率为：81% loss为0.801823 (ε = 1.12, δ = 0.0001)\n",
+            "第11个epoch的识别准确率为：83% loss为0.791835 (ε = 1.17, δ = 0.0001)\n",
+            "第12个epoch的识别准确率为：84% loss为0.769097 (ε = 1.22, δ = 0.0001)\n",
+            "第13个epoch的识别准确率为：84% loss为0.758918 (ε = 1.27, δ = 0.0001)\n",
+            "第14个epoch的识别准确率为：85% loss为0.745147 (ε = 1.33, δ = 0.0001)\n",
+            "第15个epoch的识别准确率为：86% loss为0.728392 (ε = 1.37, δ = 0.0001)\n",
+            "第16个epoch的识别准确率为：87% loss为0.711224 (ε = 1.42, δ = 0.0001)\n",
+            "第17个epoch的识别准确率为：87% loss为0.691111 (ε = 1.47, δ = 0.0001)\n",
+            "第18个epoch的识别准确率为：88% loss为0.670106 (ε = 1.51, δ = 0.0001)\n",
+            "第19个epoch的识别准确率为：88% loss为0.655455 (ε = 1.56, δ = 0.0001)\n",
+            "第20个epoch的识别准确率为：88% loss为0.645371 (ε = 1.60, δ = 0.0001)\n",
+            "第21个epoch的识别准确率为：88% loss为0.633558 (ε = 1.64, δ = 0.0001)\n",
+            "第22个epoch的识别准确率为：89% loss为0.617066 (ε = 1.68, δ = 0.0001)\n",
+            "第23个epoch的识别准确率为：89% loss为0.607644 (ε = 1.72, δ = 0.0001)\n",
+            "第24个epoch的识别准确率为：89% loss为0.598018 (ε = 1.76, δ = 0.0001)\n",
+            "第25个epoch的识别准确率为：90% loss为0.587792 (ε = 1.80, δ = 0.0001)\n",
+            "第26个epoch的识别准确率为：90% loss为0.579614 (ε = 1.84, δ = 0.0001)\n",
+            "第27个epoch的识别准确率为：90% loss为0.570178 (ε = 1.88, δ = 0.0001)\n",
+            "第28个epoch的识别准确率为：90% loss为0.565482 (ε = 1.92, δ = 0.0001)\n",
+            "第29个epoch的识别准确率为：90% loss为0.542561 (ε = 1.96, δ = 0.0001)\n",
+            "第30个epoch的识别准确率为：90% loss为0.531741 (ε = 1.99, δ = 0.0001)\n"
           ]
         }
       ],
@@ -521,12 +501,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "abZi5GPwwxY1"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        ""
+      ]
     }
   ],
   "metadata": {
